# SnackerEngine

./: .gitignore  SnackerEngine.sln  q  temp.txt
Application/: Application.vcxproj  main.cpp
Demo GUI/: Demo GUI.vcxproj  main.cpp
Demo Network/: Demo Network.vcxproj  main.cpp
Demo OBJ loading rave party/: Demo OBJ loading rave party.vcxproj  main.cpp
Demo textured scene/: Demo textured scene.vcxproj  main.cpp
Math/: CMakeCache.txt  CMakeLists.txt  Conversions.cpp  Conversions.h  Makefile  Mat.h  Math.vcxproj  (+7 more)
Network/: CMakeCache.txt  CMakeLists.txt  Makefile  Network.cpp  Network.h  Network.vcxproj  Network.vcxproj.filters  cmake_install.cmake
Network/HTTP/: HTTP.cpp  HTTP.h  Header.cpp  Header.h  Message.cpp  Message.h  Request.cpp  Request.h  Response.cpp  Response.h  ResponseStatusCode.cpp  ResponseStatusCode.h
Network/SERP/: SERP.cpp  SERP.h  SERPEndpoint.cpp  SERPEndpoint.h  SERPID.cpp  SERPID.h  StatusCodes.cpp  StatusCodes.h
Network/TCP/: TCP.cpp  TCP.h  TCPEndpoint.cpp  TCPEndpoint.h
Utility/: Alignment.cpp  Alignment.h  Animatable.cpp  Animatable.h  AnimationFunctions.cpp  AnimationFunctions.h  Buffer.cpp  Buffer.h  CMakeCache.txt  CMakeLists.txt  Conversions.cpp  Conversions.h  Exception.h  Formatting.cpp  Formatting.h  Json.cpp  Json.h  Keys.h  Makefile  Random.cpp  Random.h  Timer.cpp  Timer.h  Utility.vcxproj  Utility.vcxproj.filters  base64.cpp  base64.h  cmake_install.cmake
Utility/Assert/: Assert.h
Utility/Handles/: EventHandle.cpp  EventHandle.h  VariableHandle.h  VectorEventHandle.cpp  VectorEventHandle.h  VectorVariableHandle.h
(+840 files in other folders)
